<resources>
    <string name="app_name">Hanasu</string>
    <string name="app_name_caps">HANASU</string>
    <string name="register">Registro</string>
    <string name="register_2">Registrarse</string>
    <string name="register_instruction">Por favor ingresa tu información personal</string>
    <string name="register_user">Nombre de usuario</string>
    <string name="register_user_hint">Usuario</string>
    <string name="register_mail">Correo</string>
    <string name="register_mail_hint">Correo electrónico</string>
    <string name="register_pswd">Contraseña</string>
    <string name="register_pswd_hint">Introduzca su contraseña</string>
    <string name="register_pswd_confirm">Confirma tu contraseña</string>
    <string name="register_pswd_confirm_hint">Confirme su contraseña ingresada</string>
    <string name="register_btn">Registrarse</string>
    <string name="return_btn">Retorno</string>
    <string name="already_login">¿Tienes una cuenta?</string>
    <string name="login">Inicia sesión</string>
    <string name="logo">Logo</string>
    <string name="user_icon">User icon</string>
    <string name="landing_title">Chats</string>
    <string name="story_icon_description">Story icon</string>

    <string name="loading_message">from Abstrack &amp; CBTIS 051</string>
    <string name="login_msg">¡Hola! Que gusto tenerte de vuelta.</string>
    <string name="password_txt">Introduce tu contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_btn">Inicio de sesión</string>
    <string name="new_member">¿No tienes cuenta?</string>
    <string name="send">Enviar</string>
    <string name="text_forgot">Ingresa tu dirección de correo electrónico y te enviaremos un enlace para que puedas crear una nueva contraseña.</string>
    <string name="verify_title">Verifique su cuenta</string>
    <string name="verify_instruction">¡Muchas gracias por registrarse! Hemos enviado un enlace de confirmación al correo:</string>
    <string name="verify_instruction2">Debe entrar al enlace para verificar su cuenta.</string>
    <string name="verify_email">placeholder@gmail.com</string>
    <string name="verify_not_mail">¿No recibiste ningún correo?</string>
    <string name="verify_resend"><u>reenviar correo</u></string>
    <string name="verify_send">Enviar</string>
    <string name="verify_check">Revise su pestaña de spam o</string>
    <string name="restore_pswd">Restablecimiento de contraseña</string>
    <string name="restore_instruction">Hemos enviado un enlace para el restablecimiento de su contraseña al correo:</string>
    <string name="restore_instruction2">Debe entrara al enlace para restablecer su contraseña.</string>
    <string name="username_title">Nombre de usuario</string>
    <string name="username_instruction">¡Ingresa el nombre con el que podrán contactarte otros usuarios!</string>
    <string name="add_chat">Añadir un amigo</string>
    <string name="add_chat_instruction">Ingresa el identificador de la persona que quieres agregar 🌱</string>
    <string name="username_hashtag">#</string>
    <string name="username_hint">Usuario</string>
    <string name="username_tag_hint">Tag</string>
    <string name="username_btn">Aceptar</string>
    <string name="profile_info_title">Información del perfil</string>
    <string name="profile_info_instruction">Por favor, ingresa un nombre y foto de perfil.</string>
    <string name="profile_info_name_hint">Escribe tu nombre aquí</string>
    <string name="profile_info_btn">Aceptar y Continuar</string>
    <string name="welcome_title">¡Bienvenido a Hanasu!</string>
    <string name="welcome_terms">Lee nuestras</string>
    <string name="welcome_terms_2"><u>políticas de privacidad.</u></string>
    <string name="a">Presiona el siguiente botón para aceptar nuestros términos y condiciones.</string>
    <string name="add_friend_btn">Agregar</string>
    <string name="add_friend_icon">Add chat icon</string>
    <string name="search_icon">Search icon</string>
    <string name="plus_icon">Show more options icon</string>
    <string name="add_group_icon">Add groups icon</string>
    <string name="profile_pic_title">Foto de perfil</string>
    <string name="profile_pic_camera">Cámara</string>
    <string name="profile_pic_gallery">Galería</string>
    <string name="profile_pic_trash">Basura</string>
    <string name="msg_hint">Mensaje</string>
    <string name="no_chats_text_view">Parece que aún no tienes ningún contacto, agrega uno</string>
    <string name="profile_title">Perfil</string>
    <string name="profile_name_hint">Este es el nombre que será visible para los demás</string>
    <string name="profile_identifier_hint">Comparte este identificador para que puedan agregarte como contacto</string>

</resources>