<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.auth.VerifyForgottenPasswordActivity">

    <TextView
        android:id="@+id/txtResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/asap"
        android:onClick="sendPasswordEmail"
        android:text="@string/verify_resend"
        android:textColor="@color/resend_color"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtInstruction3"
        app:layout_constraintTop_toBottomOf="@+id/txtNotEmail" />

    <TextView
        android:id="@+id/txtNotEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="98dp"
        android:fontFamily="@font/asap"
        android:text="@string/verify_not_mail"
        android:textColor="@color/instruction_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstruction2" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_main_logo_foreground" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/asap"
        android:text="@string/verify_email"
        android:textColor="@color/detail_color_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstruction" />

    <TextView
        android:id="@+id/txtInstruction3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/asap"
        android:text="@string/verify_check"
        android:textColor="@color/instruction_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNotEmail" />

    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="21dp"
        android:fontFamily="@font/asap"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/restore_instruction"
        android:textColor="@color/instruction_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRestore" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background"
        android:contentDescription="@string/register_btn"
        android:onClick="changeToLoginActivity"
        app:icon="@mipmap/ic_return_foreground"
        app:iconSize="30dp"
        app:iconTint="@color/accent_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtInstruction2"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="21dp"
        android:fontFamily="@font/asap"
        android:text="@string/restore_instruction2"
        android:textColor="@color/instruction_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtRestore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/restore_pswd"
        android:textColor="@color/accent_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHanasu" />

    <TextView
        android:id="@+id/txtHanasu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/app_name_caps"
        android:textColor="@color/accent_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
</androidx.constraintlayout.widget.ConstraintLayout>