<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.auth.WelcomeActivity">

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/profile_info_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstruction3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/txtInstruction3"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/asap"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/a"
        android:textColor="@color/instruction_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInstruction1" />

    <TextView
        android:id="@+id/txtInstruction1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/asap"
        android:text="@string/welcome_terms"
        android:textColor="@color/instruction_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/txtInstruction2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/asap"
        android:text="@string/welcome_terms_2"
        android:textColor="@color/important_color_primary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/txtInstruction1"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background"
        android:contentDescription="@string/register_btn"
        android:onClick="changeToLastActivity"
        app:icon="@mipmap/ic_return_foreground"
        app:iconSize="30dp"
        app:iconTint="@color/accent_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="189dp"
        android:layout_height="205dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHanasu"
        app:srcCompat="@mipmap/ic_main_logo_foreground" />

    <TextView
        android:id="@+id/txtHanasu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/welcome_title"
        android:textColor="@color/accent_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>