<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:scrollbarStyle="insideOverlay"
    tools:context=".activity.landing.AddChatActivity">

    <TextView
        android:id="@+id/addChatInstructions"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/asap"
        android:text="@string/add_chat_instruction"
        android:textColor="@color/instruction_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addChatTitle" />

    <Button
        android:id="@+id/returnToLandingButton"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/background"
        android:contentDescription="@string/register_btn"
        app:icon="@mipmap/ic_return_foreground"
        app:iconSize="30dp"
        app:iconTint="@color/accent_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/addChatTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/add_chat"
        android:textColor="@color/accent_color"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnToLandingButton" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/asap"
        android:hint="@string/username_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/hints"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addChatButton"
        app:layout_constraintStart_toStartOf="@+id/addChatInstructions"
        app:layout_constraintTop_toBottomOf="@+id/addChatInstructions"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_hashtag"
        android:textColor="@color/hints"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/nameField"
        app:layout_constraintStart_toEndOf="@+id/nameField"
        app:layout_constraintTop_toTopOf="@+id/nameField" />

    <EditText
        android:id="@+id/tagField"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/asap"
        android:hint="@string/username_tag_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/hints"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/nameField" />

    <Button
        android:id="@+id/addChatButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:fontFamily="@font/asap"
        android:text="@string/add_chat_btn"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addChatInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>