<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RegisterActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="900dp">

      <TextView
          android:id="@+id/txtAccount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="64dp"
          android:layout_marginTop="12dp"
          android:fontFamily="@font/asap"
          android:text="@string/already_login"
          android:textColor="#90A4AE"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/btnRegister"
          app:layout_constraintVertical_bias="0.0" />

      <TextView
          android:id="@+id/txtLogin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="12dp"
          android:layout_marginEnd="40dp"
          android:fontFamily="@font/asap"
          android:onClick="changeToLastActivity"
          android:text="@string/login"
          android:textColor="@color/white"
          android:textSize="16sp"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toEndOf="@+id/txtAccount"
          app:layout_constraintTop_toBottomOf="@+id/btnRegister"
          app:layout_constraintVertical_bias="0.0" />

      <TextView
          android:id="@+id/txtUser"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="12dp"
          android:fontFamily="@font/asap"
          android:text="@string/register_user"
          android:textColor="@color/white"
          android:textSize="14sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/txtInstruction" />

      <TextView
          android:id="@+id/txtRegister"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="40dp"
          android:fontFamily="@font/quicksand_bold"
          android:text="@string/register"
          android:textColor="@color/accent_color"
          android:textSize="26sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/txtHanasu" />

      <TextView
          android:id="@+id/txtInstruction"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="12dp"
          android:fontFamily="@font/asap"
          android:text="@string/register_instruction"
          android:textColor="#90A4AE"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/txtRegister" />

      <TextView
          android:id="@+id/txtPswdC"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="12dp"
          android:fontFamily="@font/asap"
          android:text="@string/register_pswd_confirm"
          android:textColor="@color/white"
          android:textSize="14sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.004"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/edtTxtPswd" />

      <TextView
          android:id="@+id/txtMail"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="12dp"
          android:fontFamily="@font/asap"
          android:text="@string/register_mail"
          android:textColor="@color/white"
          android:textSize="14sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.002"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/edtTxtUser" />

      <TextView
          android:id="@+id/txtPswd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="12dp"
          android:fontFamily="@font/asap"
          android:text="@string/register_pswd"
          android:textColor="@color/white"
          android:textSize="14sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.003"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/edtTxtMail" />

      <EditText
          android:id="@+id/edtTxtPswdC"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:autofillHints=""
          android:backgroundTint="@color/white"
          android:ems="10"
          android:fontFamily="@font/asap"
          android:hint="@string/register_pswd_confirm_hint"
          android:inputType="textPassword"
          android:minHeight="48dp"
          android:textColor="@color/white"
          android:textColorHint="#90A4AE"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/txtPswdC" />

      <EditText
          android:id="@+id/edtTxtMail"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:autofillHints=""
          android:backgroundTint="@color/white"
          android:ems="10"
          android:fontFamily="@font/asap"
          android:hint="@string/register_mail_hint"
          android:inputType="textPersonName"
          android:minHeight="48dp"
          android:textColor="@color/white"
          android:textColorHint="#90A4AE"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.021"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/txtMail" />

      <EditText
          android:id="@+id/edtTxtPswd"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:autofillHints=""
          android:backgroundTint="@color/white"
          android:ems="10"
          android:fontFamily="@font/asap"
          android:hint="@string/register_pswd"
          android:inputType="textPassword"
          android:minHeight="48dp"
          android:textColor="@color/white"
          android:textColorHint="#90A4AE"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.021"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/txtPswd"
          tools:ignore="DuplicateSpeakableTextCheck" />

      <EditText
          android:id="@+id/edtTxtUser"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:autofillHints=""
          android:backgroundTint="@color/white"
          android:ems="10"
          android:fontFamily="@font/asap"
          android:hint="@string/register_user_hint"
          android:inputType="textPersonName"
          android:minHeight="48dp"
          android:textColor="@color/white"
          android:textColorHint="#90A4AE"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.021"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/txtUser" />

      <ImageView
          android:id="@+id/imgLogo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="36dp"
          android:contentDescription="@string/logo"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:srcCompat="@mipmap/ic_main_logo_foreground" />

      <TextView
          android:id="@+id/txtHanasu"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/quicksand_bold"
          android:text="@string/app_name"
          android:textColor="@color/accent_color"
          android:textSize="30sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

      <Button
          android:id="@+id/btnRegister"
          android:layout_width="0dp"
          android:layout_height="62dp"
          android:layout_marginStart="21dp"
          android:layout_marginTop="12dp"
          android:layout_marginEnd="20dp"
          android:background="@drawable/round_button"
          android:backgroundTint="@color/accent_color"
          android:fontFamily="@font/quicksand_bold"
          android:text="@string/register_btn"
          android:textAllCaps="false"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/edtTxtPswdC"
          tools:ignore="DuplicateSpeakableTextCheck" />

      <Button
          android:id="@+id/btnReturn"
          android:layout_width="57dp"
          android:layout_height="48dp"
          android:layout_marginTop="16dp"
          android:backgroundTint="@color/background"
          android:contentDescription="@string/register_btn"
          android:onClick="changeToLastActivity"
          app:icon="@mipmap/ic_return_foreground"
          app:iconSize="30dp"
          app:iconTint="@color/accent_color"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="DuplicateSpeakableTextCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>